--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,13 +28,18 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
 }
 
-.socialMedia li {
-	display: inline-flex;
-	margin: 0 0.5rem;
-	font-size: 1.3rem;
+.emailIcon, .socialMediaIcon {
+	fill: black;
+	width: 32px;
+	font-size: 32px;
 }
+
 
 .socialMedia a {
 	display: flex;
@@ -44,17 +49,15 @@
 
 .socialMedia a:hover {
 	transition: ease-in-out 0.5s;
-
 	opacity: 0.4;
 }
+
 .title a {
 	color: #0070f3;
 	text-decoration: none;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
+.title a:hover, .title a:focus, .title a:active {
 	text-decoration: underline;
 }
 
@@ -65,8 +68,7 @@
 	font-weight: 400;
 }
 
-.title,
-.description {
+.title, .description {
 	text-align: center;
 }
 
@@ -80,4 +82,5 @@
 .photo {
 	border-radius: 100%;
 	margin-bottom: 2rem;
+	width: 12rem;
 }
