--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -14,3 +14,8 @@
 
 {{/* Projects section */}}
 {{ partial "projects.html" . }}
+
+{{/* Blog section */}}
+<section class="blog-section">
+    <h2>Blog Posts</h2>
+</section>
